# eventhorizon

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONNECTORS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SCHEMA.md  SERVICE_ACCOUNT.md  clippy.toml  docker-compose.yml  eventhorizon_architecture.md  index.html  schema.html
.claude/: settings.local.json
.claude/skills/zero-trust-execution/: SKILL.md
.github/workflows/: ci.yml
crates/eh-bin/: Cargo.toml
crates/eh-bin/src/: main.rs
crates/eh-bin/tests/: smoke_intent_pipeline.rs
crates/eh-compiler/: Cargo.toml
crates/eh-compiler/src/: lib.rs
crates/eh-config/: Cargo.toml
crates/eh-config/src/: cache.rs  compiled.rs  config.rs  errors.rs  lib.rs  loader.rs  routing.rs  secret.rs  source.rs
crates/eh-conformance/: Cargo.toml
crates/eh-conformance/src/: lib.rs
crates/eh-connector-api/: Cargo.toml
crates/eh-connector-api/src/: caps.rs  connector.rs  errors.rs  lib.rs  outcome.rs  registry.rs
crates/eh-connector-mysql/: Cargo.toml
crates/eh-connector-mysql/src/: arrow_schema.rs  catalog.rs  config.rs  connector.rs  factory.rs  ident.rs  insert.rs  introspection.rs  lib.rs  query.rs  table_provider.rs  types.rs
crates/eh-control-api/: Cargo.toml
crates/eh-control-api/src/: lib.rs
crates/eh-core/: Cargo.toml
crates/eh-core/src/: access.rs  artifact.rs  caller_context.rs  entity.rs  errors.rs  intent.rs  lib.rs
crates/eh-cost/: Cargo.toml
crates/eh-cost/src/: lib.rs
crates/eh-ctl/: Cargo.toml
crates/eh-ctl/src/: main.rs
crates/eh-edge-mcp/: Cargo.toml
crates/eh-edge-mcp/src/: lib.rs
crates/eh-edge-rest/: Cargo.toml
crates/eh-edge-rest/src/: dispatch.rs  lib.rs  state.rs
crates/eh-engine-df/: Cargo.toml
crates/eh-engine-df/src/: config.rs  engine.rs  errors.rs  lib.rs
crates/eh-policy/: Cargo.toml
crates/eh-policy/src/: lib.rs
crates/eh-protocol/: Cargo.toml
crates/eh-protocol/src/: envelope.rs  error_response.rs  lib.rs
crates/eh-router/: Cargo.toml
crates/eh-router/src/: lib.rs
crates/eh-telemetry/: Cargo.toml
crates/eh-telemetry/src/: lib.rs
db/: README.md
db/mysql/init/: 01_fvp_schema.sql  02_users.sh
db/postgres/: schema.sql
db/postgres/init/: zz_set_role_passwords.sh
db/postgres/migrations/: 0001_schemas_and_roles.sql  0002_identity.sql  0003_authorization.sql  0004_sources_core.sql  0005_source_kinds.sql  0006_semantic_schema.sql  0007_bindings_routing.sql  0008_entity_relationships.sql  0009_operational_audit.sql  0010_operational_other.sql  0011_rls_policies.sql  0012_source_auth_extension.sql
db/postgres/seeds/: README.md
examples/config/: eventhorizon.yaml
scripts/: check-no-admin-creds.sh  check-schema-sync.sh  generate-unified-schema.sh  verify-control-plane-lockdown.sh
