[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/k8nstantin/eventhorizon"
homepage = "https://github.com/k8nstantin/eventhorizon"
authors = ["EventHorizon contributors"]

# ---------------------------------------------------------------------------
# Workspace-wide dependencies. Crates pull these via `.workspace = true`.
# Keep the surface small and intentional — adding a new dep belongs in a PR
# of its own where the trade-off can be reviewed.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "io-util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUIDs (v7 = time-ordered per architecture §5.1)
uuid = { version = "1.10", features = ["v7", "serde"] }

# Errors
anyhow = "1"
thiserror = "2"

# Telemetry / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Web (REST edge + healthz)
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json"] }
tower = "0.5"

# Async traits
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
