[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/k8nstantin/eventhorizon"
homepage = "https://github.com/k8nstantin/eventhorizon"
authors = ["EventHorizon contributors"]

# ---------------------------------------------------------------------------
# Workspace-wide dependencies. Crates pull these via `.workspace = true`.
# Keep the surface small and intentional — adding a new dep belongs in a PR
# of its own where the trade-off can be reviewed.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "io-util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUIDs (v7 = time-ordered per architecture §5.1)
uuid = { version = "1.10", features = ["v7", "serde"] }

# Errors
anyhow = "1"
thiserror = "2"

# Telemetry / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Web (REST edge + healthz)
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json"] }
tower = "0.5"

# Async traits
async-trait = "0.1"

# YAML config (eh-config)
serde_yaml = "0.9"

# In-memory config cache (ArcSwap<CompiledConfig> for hot-swap on reload)
arc-swap = "1.7"

# Prometheus /metrics for the gateway (Tier-1 telemetry)
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }

# DataFusion — the always-on agent <-> database firewall. Owns query
# parsing, validation, planning, optimization, federation, SQL generation.
# Connectors implement `datafusion::catalog::TableProvider`; DF calls down.
# See memory: eventhorizon_access_modes.md.
datafusion = { version = "53", default-features = false, features = [
    "parquet",
] }
# DataFusion's parser, re-exported here so eh-config / eh-engine-df can
# walk SQL ASTs without taking the full DF dep when they only need parsing.
sqlparser = "0.55"

# sqlx — MySQL driver for eh-connector-mysql.
# Features pinned per the FVP needs: tokio runtime + rustls TLS,
# native uuid (BINARY(16) bind), chrono (TIMESTAMP), rust_decimal (DECIMAL).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "uuid",
    "chrono",
    "rust_decimal",
    "json",
] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
rust_decimal = { version = "1", default-features = false, features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
