[package]
name = "eh-bin"
description = "EventHorizon: the gateway binary that wires modules together"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "eh-bin"
path = "src/main.rs"

[dependencies]
eh-telemetry = { path = "../eh-telemetry" }
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
