[package]
name = "eh-compiler"
description = "EventHorizon: pre-execution intent validation (Phase 1) + DataFusion plan compilation (Phase 4+)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[dependencies]
eh-core = { path = "../eh-core" }
serde_json.workspace = true
thiserror.workspace = true
