[package]
name = "eh-config"
description = "EventHorizon: YAML config loader for sources/entities/bindings/rules (FVP control plane)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[dependencies]
eh-core = { path = "../eh-core" }
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
arc-swap.workspace = true

[dev-dependencies]
tempfile = "3"
