[package]
name = "eh-connector-api"
description = "EventHorizon: public Connector trait and capability surface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[dependencies]
eh-core = { path = "../eh-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
# DataFusion is always-on in the EventHorizon architecture (the agent <->
# database firewall). Every connector exposes a TableProvider; DF drives
# the data path. See memory: eventhorizon_access_modes.md.
datafusion.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
