[package]
name = "eh-connector-mysql"
description = "EventHorizon: MySQL connector — read AND write paths, gated by binding supported_actions, UUIDv7 BINARY(16) native bind"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[dependencies]
eh-core = { path = "../eh-core" }
eh-config = { path = "../eh-config" }
eh-connector-api = { path = "../eh-connector-api" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
sqlx = { workspace = true }
tracing.workspace = true
hex = "0.4"
# DataFusion is always-on in EventHorizon's architecture (see memory:
# eventhorizon-access-modes). The MySQL connector exposes a
# CatalogProvider; DF drives the data path.
datafusion.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
