[package]
name = "eh-protocol"
description = "EventHorizon: wire-format envelopes + structured errors for the REST/MCP edges"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[dependencies]
eh-core = { path = "../eh-core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
