[package]
name = "eh-router"
description = "EventHorizon: declarative routing rule evaluator over the loaded CompiledConfig"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[dependencies]
eh-core = { path = "../eh-core" }
eh-config = { path = "../eh-config" }
thiserror.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
